--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -20,6 +19,10 @@
         android:roundIcon="@drawable/ic_todolist"
         android:supportsRtl="true"
         android:theme="@style/BlueTheme">
+        <activity
+            android:name=".InitiateLanguageActivity"
+            android:exported="false"
+           />
         <activity
             android:name=".SynchronizetionActivity"
             android:exported="false" />
@@ -44,17 +47,13 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".master.MyCustomReceiver" />
-
-        <!--google drive-->
+        <receiver android:name=".master.MyCustomReceiver" /> <!-- google drive -->
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
-
-        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+            android:value="@integer/google_play_services_version" /> <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/My_App_Id"/>
+            android:value="@string/My_App_Id" />
     </application>
 
 </manifest>
