--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,11 +13,11 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33 //31
     defaultConfig {
         applicationId "com.chillchillapp.gthingstodo"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 33 //30
         versionCode 4 // 7/11/2022-10:18
         versionName "1.1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
