--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,16 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
 
+    //fab
+    implementation 'com.github.clans:fab:1.6.4'
+
     //image
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //image zoom
+    implementation 'com.jsibbold:zoomage:1.3.1'
 
     //image gif
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
