-edit design Set Location Task

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".SelectSymbol" />
         <activity android:name=".InputTasksActivity" />
         <activity android:name=".LoginActivity" />
+        <activity android:name=".SetCoordinateActivity" />
         <activity android:name=".MainActivity" />
 
         <activity android:name=".CheckPermission"
